[gd_scene load_steps=8 format=3 uid="uid://cior0dcs6ed63"]

[ext_resource type="Script" uid="uid://dlrytaiuyn55o" path="res://scripts/enemy.gd" id="1_md0e3"]
[ext_resource type="PackedScene" uid="uid://c7get6g3tjt8c" path="res://assets/enemies/enemy.tscn" id="2_md0e3"]
[ext_resource type="Shader" uid="uid://die6iu052l4ql" path="res://shaders/main_thruster.gdshader" id="3_4ra3w"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4ra3w"]
size = Vector3(20, 4, 20)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_md0e3"]
height = 200.0
radius = 24.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5uy6h"]
render_priority = 0
shader = ExtResource("3_4ra3w")
shader_parameter/intensity = 1.0
shader_parameter/flame_color = Color(1, 1, 1, 1)
shader_parameter/max_length = 8.0
shader_parameter/wobble_strength = 0.05
shader_parameter/wobble_speed = 1.5
shader_parameter/tip_wobble = 2.0
shader_parameter/fade_power = 0.5
shader_parameter/base_alpha = 0.8

[sub_resource type="CylinderMesh" id="CylinderMesh_c4w8v"]
material = SubResource("ShaderMaterial_5uy6h")
top_radius = 0.4
bottom_radius = 1.5
height = 8.0

[node name="Enemy" type="RigidBody3D"]
collision_layer = 4
collision_mask = 4
continuous_cd = true
contact_monitor = true
max_contacts_reported = 4
script = ExtResource("1_md0e3")
metadata/_edit_group_ = true

[node name="Enemy" parent="." instance=ExtResource("2_md0e3")]
transform = Transform3D(-8.742278e-06, -200, -8.742278e-06, 0, -8.742278e-06, 200, -200, 8.742278e-06, 3.8213708e-13, 0, 0, 0)

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
shape = SubResource("BoxShape3D_4ra3w")

[node name="RangeCone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 12.620742)

[node name="Cone1" type="CollisionShape3D" parent="RangeCone"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 100)
shape = SubResource("CylinderShape3D_md0e3")

[node name="Thrusters" type="Node3D" parent="."]

[node name="LeftWing" type="MeshInstance3D" parent="Thrusters"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 8.5, -0.6, -7.5)
mesh = SubResource("CylinderMesh_c4w8v")

[node name="RightWing" type="MeshInstance3D" parent="Thrusters"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, -8.5, -0.6, -7.5)
mesh = SubResource("CylinderMesh_c4w8v")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="RangeCone" to="." method="_on_range_cone_body_entered"]
[connection signal="body_exited" from="RangeCone" to="." method="_on_range_cone_body_exited"]
